parte2-kubernetes-ansible/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: proyecto-final
  labels: { app: db }
spec:
  replicas: 1
  selector:
    matchLabels: { app: db }
  template:
    metadata:
      labels: { app: db }
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec: { command: ["pg_isready","-U","labuser"] }
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: proyecto-final
spec:
  selector: { app: db }
  ports:
    - port: 5432
      targetPort: 5432
