parte2-kubernetes-ansible/06-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: devops-lab
  labels: { app: api }
spec:
  replicas: 2
  selector:
    matchLabels: { app: api }
  template:
    metadata:
      labels: { app: api }
    spec:
      containers:
        - name: api
          image: andrs/flaskapi:5.0
          #image: usuario/flaskapi:1.0   # <-- pon tu imagen
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet: { path: /ping, port: 5000 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /ping, port: 5000 }
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: devops-lab
spec:
  selector: { app: api }
  ports:
    - port: 80
      targetPort: 5000
