parte2-kubernetes-ansible/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: proyecto-final
spec:
  selector: { app: api }
  ports:
    - port: 80
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: proyecto-final
spec:
  selector: { app: db }
  ports:
    - port: 5432
      targetPort: 5432
