parte2-kubernetes-ansible/ingress.yaml
# --------------------------------------------------------------------------
# SECCIÓN 1: CREACION DEL INGRESS CONTROLLER
# --------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: proyecto-final
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
---
